[package]
name = "groundcontrol"
version = "0.1.0"
publish = false
authors = ["Michael Alyn Miller <malyn@strangeGizmo.com>"]
edition = "2021"
rust-version = "1.60"
exclude = [ ".dockerignore", ".editorconfig", ".gitattributes", ".github", ".gitignore" ]

[dependencies]
anyhow = "1"
clap = { version = "3.2.5", features = ["derive"] }
futures-util = "0.3"
nix = "0.24.1"
regex = "1.6.0"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
users = "0.11.0"