[package]
name = "groundcontrol"
version = "0.1.0"
publish = false
authors = ["Michael Alyn Miller <malyn@strangeGizmo.com>"]
edition = "2021"
rust-version = "1.60"
exclude = [ ".dockerignore", ".editorconfig", ".gitattributes", ".github", ".gitignore" ]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "3.2.5", features = ["derive"] }
command-group = { version = "1.0.8", features = ["with-tokio"] }
nix = "0.22"
regex = "1.6.0"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }
users = "0.11.0"

[dev-dependencies]
mockall = "0.11.0"
tempfile = "3.3.0"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1.0", features = ["time"] }