[package]
name = "groundcontrol"
version = "0.1.0"
publish = false
authors = ["Michael Alyn Miller <malyn@strangeGizmo.com>"]
edition = "2021"
rust-version = "1.60"
exclude = [ ".dockerignore", ".editorconfig", ".gitattributes", ".github", ".gitignore" ]

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
command-group = { version = "1.0.8", features = ["with-tokio"] }
console = { version = "0.15.2", default-features = false, features = ["ansi-parsing"] }
nix = "0.22"
once_cell = "1.16.0"
regex = "1.6.0"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3.17", features = ["formatting", "macros"] }
tokio = { version = "1.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }
users = "0.11.0"

[dev-dependencies]
indoc = "1.0.7"
pretty_assertions = "1.3.0"
tempfile = "3.3.0"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1.0", features = ["time"] }
